:bug: overflow

--- a/public/css/underground.css
+++ b/public/css/underground.css
@@ -3,6 +3,7 @@ body {
   background: radial-gradient(circle, rgba(0,55,62,1) 0%, rgba(0,0,0,1) 61%);  
   font-size: 5px;
   margin-top: 0;
+  overflow-y: hidden;
 }
 
 /* Wall header */
